k8s/apps/default/sportarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sportarr
  labels:
    app.kubernetes.io/name: sportarr
    app.kubernetes.io/instance: sportarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sportarr
      app.kubernetes.io/instance: sportarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sportarr
        app.kubernetes.io/instance: sportarr
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostname: sportarr
      volumes:
        - name: arr-media
          nfs:
            server: nas.cbannister.casa
            path: /mnt/bighorse/arr
        - name: config
          persistentVolumeClaim:
            claimName: sportarr
        - name: cache
          persistentVolumeClaim:
            claimName: sportarr-cache
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 3005
        supplementalGroups: [3005]
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: sportarr
          image: sportarr/sportarr:4.0.983.1057
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "512m"
              memory: 1Gi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 1867
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data/media/sports
              subPath: media/sports
            - name: arr-media
              mountPath: /data/downloads/torrents/complete/sportarr
              subPath: downloads/torrents/complete/sportarr
            - name: cache
              mountPath: /config/MediaCover
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /ping
              port: web
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe: *probe
