k8s/apps/default/sportarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sportarr
  labels:
    app.kubernetes.io/name: sportarr
    app.kubernetes.io/instance: sportarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sportarr
    app.kubernetes.io/instance: sportarr
  ports:
    - name: web
      targetPort: web
      port: 80
